# focus-app

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  README.md  rust-toolchain.toml  rustfmt.toml
.github/workflows/: rust-build.yml.disabled
FocusApp/FocusApp/: CommandPaletteView.swift  ContentView.swift  DashboardView.swift  FocusApp-Bridging-Header.h  FocusApp.xcconfig  FocusAppApp.swift  FocusCoreBridge.swift  FocusModeView.swift  FocusViewModel.swift  MainSidebarView.swift  MenuBarCompanionView.swift  SettingsView.swift  Tailwind.swift  TaskDetailView.swift  TaskListView.swift  TaskRowView.swift
FocusApp/FocusApp.xcodeproj/: project.pbxproj
FocusCore/: Package.swift
FocusCore.xcframework/: Info.plist
FocusCore.xcframework/ios-arm64-simulator/Headers/: focus_core.swift
FocusCore.xcframework/macos-arm64_x86_64/Headers/: focus_coreFFI.h
FocusCore/FocusCore.xcframework/: Info.plist
FocusCore/Sources/FocusCore/: focus_core.swift
focus-core/: Cargo.toml  build_apple.sh
focus-core/generated_swift/: focus_coreFFI.h
focus-core/src/: database.rs  lib.rs  tests.rs  timer.rs
project_documentations/: ARCHITECTURE.md  ARCHITECTURE_REASONING.md  DESIGN_PLAN.md  PHASE_1.md  PHASE_1_2.md  PHASE_2.md  SETUP_GUIDE.md  XCODE_INTEGRATION_GUIDE.md
project_documentations/design_asset/: task_detail_panel_view_code.html
script/: FocusApp.xcconfig  pre-build-script.sh
