[package]
name = "focus-core"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "staticlib", "lib"]

[dependencies]
uniffi = { version = "0.28", features = ["cli"] }
uniffi_bindgen = "0.28"
rusqlite = { version = "0.33", features = ["bundled"] }
uuid = { version = "1.15", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.20"
camino = "1.1"
rrule = "0.14.0"

[target.'cfg(target_os = "android")'.dependencies]
# Future placeholder for android support
# uniffi = { version = "0.28", features = ["jni"] }

# End of dependencies

